--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "algolia-places-react": "^1.6.1",
     "antd": "^4.18.7",
     "axios": "^0.26.0",
     "moment": "^2.29.1",
