--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.18.7",
     "axios": "^0.26.0",
     "moment": "^2.29.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
